--- a/index.html
+++ b/index.html
@@ -12,10 +12,40 @@
             <h1>Header Logo</h1>
         </div>
         <div class="right-side">
-            <div>header link one</div>
-            <div>header link two</div>
-            <div>header link three</div>
+            <a href="">Header Link One</a>
+            <a href="">Header Link Two</a>
+            <a href="">Header Link Two</a>
         </div>
+    </div>
+    <div class="header-content">
+        <div class="left-main">
+            <h1 class="main-h1">This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's smaller font and the coller is lower contrast</p>
+            <button>Sign up</button>
+            <!-- <div class="main-image">this is a placeholder for an image</div> -->
+        </div>
+        <div class="main-image">this is a placeholder for an image</div>
+    </div>
+    <div class="information">
+            <h2>Some random information.</h2>
+       <div class="box-container">
+            <div class="box-wrapper">
+                <div class="info-box"></div>
+                <p class="sentence">this is some subtext under an illustration of image</p>
+            </div>
+            <div class="box-wrapper">
+                <div class="info-box"></div>
+                <p class="sentence">this is some subtext under an illustration of image</p>
+            </div>
+            <div class="box-wrapper">
+                <div class="info-box"></div>
+                <p class="sentence">this is some subtext under an illustration of image</p>
+            </div>
+            <div class="box-wrapper">
+                <div class="info-box"></div>
+                <p class="sentence">this is some subtext under an illustration of image</p>
+            </div>
+       </div>
     </div>
 </body>
 </html>
