--- a/index.html
+++ b/index.html
@@ -47,5 +47,9 @@
             </div>
        </div>
     </div>
+    <div class="quote-section">
+        <P class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? all i know is that it looks nice.</P>
+        <div class="signature">-Thor, God of Thunder</div>
+    </div>
 </body>
 </html>
