--- a/index.html
+++ b/index.html
@@ -51,5 +51,10 @@
         <P class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? all i know is that it looks nice.</P>
         <div class="signature">-Thor, God of Thunder</div>
     </div>
+    <div class="action-call">
+        <h3>Call to action! It's time!</h3>
+        <p>Signup for out product by clicking that button right over there!</p>
+        <button>Sign up</button>
+    </div>
 </body>
 </html>
