added html needed to add call to action. Also added the css to get it to look like the original.

--- a/index.html
+++ b/index.html
@@ -52,9 +52,15 @@
         <div class="signature">-Thor, God of Thunder</div>
     </div>
     <div class="action-call">
-        <h3>Call to action! It's time!</h3>
-        <p>Signup for out product by clicking that button right over there!</p>
-        <button>Sign up</button>
+        <div class="center-box">
+            <div class="left-action">
+                <h3>Call to action! It's time!</h3>
+                <p class="p-action">Signup for our product by clicking that button right over there!</p>
+            </div>
+            <div class="right-action">
+                <button>Sign up</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
