--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="header-content">
         <div class="left-main">
             <h1 class="main-h1">This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's smaller font and the coller is lower contrast</p>
+            <p class="main-p">This website has some subtext that goes here under the main title. It's smaller font and the coller is lower contrast</p>
             <button>Sign up</button>
             <!-- <div class="main-image">this is a placeholder for an image</div> -->
         </div>
